# ReproMVTrans

./: .gitignore  pyproject.toml  train.py
config/: config.yaml
notebooks/: view_results.ipynb
repromvtrans/: runner.py
repromvtrans/dataloaders/: data_factory.py  nerf_synthetic_loader.py
repromvtrans/model/: model_factory.py  multiview_net.py
repromvtrans/model/submodules/: depth_decoder.py  multiview_backbone.py  panoptic_fpn.py  psm_submodule.py  resnet_encoder.py
repromvtrans/model/transformer/: epipolar_transformer.py
repromvtrans/utils/: depth_outputs.py  epipolar_ops.py  layer_operations.py  seg_outputs.py  simplenet.py  transform_ops.py
